@@ -3,6 +3,7 @@ v1.0.3
 + imdb_person: methods to retrieve birthname, nicknames, body height and spouses
 ! imdb: languages() method was broken due to IMDB site changes
 + imdb_person: added method to retrieve mini bio
++ imdb_person: added trivia() and quotes()
 
 v1.0.2 (14.05.2008)
 -------------------
